--- a/Module-4 Modules and Classes/index.html
+++ b/Module-4 Modules and Classes/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Rapid ES6 Training</title>    
 <script src="js/main.js" type="text/javascript"></script>    
+<script src="classes/person.js" type="text/javascript"></script>    
 <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
 <script src="lib/es6-module-loader-dev.js" type="text/javascript"></script>
 <script>
@@ -11,6 +12,7 @@ System.import('./modules/base.js');
     
 </script>    
     
+  
 </head>
 <body>
 <h2>Modules and Classes in ES6</h2>    
